--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "next": "^15.4.6",
+    "openai": "^5.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12"
   }
 }
