--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,16 +29,23 @@ jobs:
       run: npm ci
       
     - name: 🔍 Type checking
-      run: npx tsc --noEmit
+      run: npx tsc --noEmit --skipLibCheck
       
-    - name: 🧹 Lint code
-      run: npm run lint
+    - name: 🧹 Lint code  
+      run: |
+        if [ ! -f .eslintrc.json ]; then
+          echo "ESLint not configured, skipping lint check"
+        else
+          npm run lint
+        fi
       
     - name: 🧪 Run all tests
       run: node run-tests.js
       
     - name: 🏗️ Test build
-      run: npm run build
+      run: |
+        export NEXT_TELEMETRY_DISABLED=1
+        npm run build
 
   test-categories:
     name: 📊 Test Categories
@@ -64,29 +71,6 @@ jobs:
       
     - name: 🧪 Run ${{ matrix.test-category }} tests
       run: node run-tests.js ${{ matrix.test-category }}
-
-  security:
-    name: 🔒 Security Audit
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: 📥 Checkout code
-      uses: actions/checkout@v4
-      
-    - name: 🟢 Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: 📦 Install dependencies
-      run: npm ci
-      
-    - name: 🔍 Security audit
-      run: npm audit --audit-level high
-      
-    - name: 🛡️ Check for vulnerabilities
-      run: npm audit --audit-level moderate
 
   build-test:
     name: 🏗️ Build Test
@@ -146,7 +130,7 @@ jobs:
   status-check:
     name: ✅ Status Check
     runs-on: ubuntu-latest
-    needs: [test, test-categories, security, build-test, performance]
+    needs: [test, test-categories, build-test, performance]
     if: always()
     
     steps:
@@ -157,7 +141,6 @@ jobs:
         echo "|-----|--------|" >> $GITHUB_STEP_SUMMARY
         echo "| Test Suite | ${{ needs.test.result == 'success' && '✅ PASSED' || '❌ FAILED' }} |" >> $GITHUB_STEP_SUMMARY
         echo "| Test Categories | ${{ needs.test-categories.result == 'success' && '✅ PASSED' || '❌ FAILED' }} |" >> $GITHUB_STEP_SUMMARY
-        echo "| Security Audit | ${{ needs.security.result == 'success' && '✅ PASSED' || '❌ FAILED' }} |" >> $GITHUB_STEP_SUMMARY
         echo "| Build Test | ${{ needs.build-test.result == 'success' && '✅ PASSED' || '❌ FAILED' }} |" >> $GITHUB_STEP_SUMMARY
         echo "| Performance | ${{ needs.performance.result == 'success' && '✅ PASSED' || '❌ FAILED' }} |" >> $GITHUB_STEP_SUMMARY
         
